fixes hero content spacing issue on large screens

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -38,6 +38,9 @@
         flex-direction: column;
         max-width: 750px;
     }
+    @media(min-width: 1200px){
+        margin-top: 2rem;
+    }
 }
 
 .hero__title {
